@@ -14,6 +14,8 @@ Mattias Ekström <mattias.ekstrom@tdcmail.se>
 Sreerekha T.R. <rekha@uni-bremen.de>	
 Thomas Kuhn  <tkuhn@uni-bremen.de>
 Richard Larsson <ric.larsson@gmail.com>
+Jana Mendrok <jana.mendrok@gmail.com>
+
 
 Other contributors:
 
@@ -31,4 +33,4 @@ Christian Melsheimer  <melsheimer@uni-bremen.de>
 Randall Skelton <rhskelto@atm.ox.ac.uk>
 Claas Teichmann  <claas@sat.physik.uni-bremen.de>
 Hermann Berg <h.berg@utoronto.ca>
-Jana Mendrok <jana.mendrok@ltu.se>
+
